# SUML-Group-Project

./: .gitignore  Documentation.docx  README.md
book-recom-web-app/: pom.xml
book-recommendation-ml/: .gitignore  README.md  pyproject.toml  stats.json
book-recommendation-ml/conf/base/: catalog.yml  logging.yml  parameters_model_training.yaml
book-recommendation-ml/docs/source/: conf.py  index.rst
book-recommendation-ml/notebooks/: Notebook_Book_Recommendation_System_Capstone_Project_4.ipynb  cleaned_data_profile_report.html
book-recommendation-ml/notebooks/exploratory/: 1-pl-datasets-initial-EDA.ipynb  2-pl-ydata-profiles.ipynb
book-recommendation-ml/src/: pyproject.toml  requirements.txt
book-recommendation-ml/src/book_recommendation_ml/: __init__.py  __main__.py  nodes.py  pipeline.py  pipeline_registry.py  settings.py
book-recommendation-ml/src/book_recommendation_ml/pipelines/data_preprocessing/: nodes.py  pipeline.py  preprocessing_pipeline.py  standard_preprocessing_pipeline.py  tensorflow_prep_pipeline.py
book-recommendation-ml/src/book_recommendation_ml/pipelines/model_bulding/: collab_filtering_pipeline.py  nodes.py  popularity_pipeline.py
book-recommendation-ml/src/book_recommendation_ml/pipelines/model_training/: nodes.py  pipeline.py  tensorflow_pipeline.py
book-recommendation-ml/src/tests/: test_run.py
front-end/: Main_Page.py  requirements.txt  user_ratings.csv
front-end/conf/base/: catalog.yml  parameters.yml
front-end/pages/: Browse_Books.py  Recommend_Books.py
notebooks/exploratory/: 1-pl-datasets-initial-EDA.ipynb
(+2 files in other folders)
