[tool.kedro]
package_name = "book_recommendation_ml"
project_name = "book-recommendation-ml"
kedro_init_version = "0.18.14"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/book_recommendation_ml -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "book-recommendation-ml"
version = "0.1.0"
description = ""
authors = ["Polina <lemann676@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
